src/cc/Hypertable/Lib/tests/schemaTest.golden
ERROR schemaTest : (${SRC_DIR}/schemaTest.cc:83) Schema Parse Error: Schema Parse Error: not well-formed (invalid token) line 2, offset 29
ERROR schemaTest : (${SRC_DIR}/schemaTest.cc:83) Schema Parse Error: Nested ColumnFamily elements not allowed
ERROR schemaTest : (${SRC_DIR}/schemaTest.cc:83) Schema Parse Error: ColumnFamily defined outside of AccessGroup
ERROR schemaTest : (${SRC_DIR}/schemaTest.cc:83) Schema Parse Error: Invalid AccessGroup attribute 'foo'
ERROR schemaTest : (${SRC_DIR}/schemaTest.cc:83) Schema Parse Error: Unrecognized element - 'BogusElement'
ERROR schemaTest : (${SRC_DIR}/schemaTest.cc:83) Schema Parse Error: Invalid value (abc) for MaxVersions
ERROR schemaTest : (${SRC_DIR}/schemaTest.cc:83) Schema Parse Error: Invalid value (foo) for AccessGroup attribute 'inMemory'
<Schema>
  <AccessGroup name="default">
    <ColumnFamily>
      <Name>default</Name>
      <MaxVersions>3</MaxVersions>
      <ttl>2592000</ttl>
    </ColumnFamily>
  </AccessGroup>
  <AccessGroup name="meta">
    <ColumnFamily>
      <Name>language</Name>
    </ColumnFamily>
    <ColumnFamily>
      <Name>checksum</Name>
    </ColumnFamily>
  </AccessGroup>
</Schema>
<Schema generation="1">
  <AccessGroup name="default">
    <ColumnFamily id="1">
      <Name>default</Name>
      <MaxVersions>3</MaxVersions>
      <ttl>2592000</ttl>
    </ColumnFamily>
  </AccessGroup>
  <AccessGroup name="meta">
    <ColumnFamily id="2">
      <Name>language</Name>
    </ColumnFamily>
    <ColumnFamily id="3">
      <Name>checksum</Name>
    </ColumnFamily>
  </AccessGroup>
</Schema>
